--- a/Angular/conFusion/src/app/dishdetail/dishdetail.component.html
+++ b/Angular/conFusion/src/app/dishdetail/dishdetail.component.html
@@ -15,8 +15,7 @@
         </mat-card-header>
         <img mat-card-image src={{dish.image}} alt={{dish.name}}>
         <mat-card-content>
-          <p>{{dish.description}}
-          </p>
+          <p>{{dish.description}}</p>
         </mat-card-content>
         <mat-card-actions>
           <button mat-button>LIKE</button>
@@ -26,7 +25,15 @@
   </div>
 
   <div fxFlex="40" *ngIf="dish">
-    <p>Display the list of comments here</p>
+    <h1>Comments</h1>
+    
+    <mat-list>
+        <mat-list-item *ngFor="let comment of dish.comments">
+            <p mat-line>{{comment.comment}}</p>
+            <p mat-line>{{comment.rating}} Stars</p>
+            <p mat-line>-- {{comment.author}} {{comment.date | date}}</p>
+        </mat-list-item>
+    </mat-list>
   </div>
 
 </div>
