--- a/Angular/conFusion/src/app/dishdetail/dishdetail.component.html
+++ b/Angular/conFusion/src/app/dishdetail/dishdetail.component.html
@@ -6,8 +6,8 @@
     fxLayoutGap="10px" 
     fxLayoutGap.xs="0">
 
-  <div fxFlex="40" *ngIf="dish">
-    <mat-card>
+  <div fxFlex="40">
+    <mat-card *ngIf="dish">
         <mat-card-header>
           <mat-card-title>
             <h3>{{dish.name | uppercase}}</h3>
@@ -24,14 +24,15 @@
       </mat-card>
   </div>
 
-  <div fxFlex="40" *ngIf="dish">
-    <h1>Comments</h1>
-    
-    <mat-list>
+  <div fxFlex="40">
+    <mat-list *ngIf="dish">
+        <h3>Comments</h3>
         <mat-list-item *ngFor="let comment of dish.comments">
-            <p mat-line>{{comment.comment}}</p>
+            <h4 mat-line>{{comment.comment}}</h4>
             <p mat-line>{{comment.rating}} Stars</p>
-            <p mat-line>-- {{comment.author}} {{comment.date | date}}</p>
+            <p mat-line>
+                <span> -- {{comment.author}} {{comment.date | date}} </span>
+            </p>
         </mat-list-item>
     </mat-list>
   </div>
