--- a/Angular/conFusion/src/app/menu/menu.component.html
+++ b/Angular/conFusion/src/app/menu/menu.component.html
@@ -21,6 +21,6 @@
     </mat-grid-list>
   </div>
 
-  <!-- selected dish detail and comment -->
+  <!-- Assign dish property to selectedDish -->
   <app-dishdetail [dish]="selectedDish"></app-dishdetail>
 </div>
