--- a/Angular/conFusion/src/styles.scss
+++ b/Angular/conFusion/src/styles.scss
@@ -1,4 +1,7 @@
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+// Import the _variable.scss file 
+@import 'variables';
+@import '../node_modules/font-awesome/scss/font-awesome';
 
 body {
     padding: 0;
