--- a/Angular/conFusion/src/app/menu/menu.component.html
+++ b/Angular/conFusion/src/app/menu/menu.component.html
@@ -12,7 +12,7 @@
   <!--  Menu list -->
   <div fxFlex>
     <mat-grid-list cols="2" rowHeight="200px">
-      <mat-grid-tile *ngFor="let dish of dishes" (click)="onSelect(dish)">
+      <mat-grid-tile *ngFor="let dish of dishes" [routerLink]="['/dishdetail', dish.id]">
         <img height="200px" src={{dish.image}} alt={{dish.name}}>
         <mat-grid-tile-footer>
           <h1>{{dish.name | uppercase}}</h1>
@@ -21,6 +21,4 @@
     </mat-grid-list>
   </div>
 
-  <!-- Assign dish property to selectedDish -->
-  <app-dishdetail [dish]="selectedDish"></app-dishdetail>
 </div>
