--- a/Angular/conFusion/src/app/dishdetail/dishdetail.component.html
+++ b/Angular/conFusion/src/app/dishdetail/dishdetail.component.html
@@ -7,7 +7,7 @@
     fxLayoutGap.xs="0">
 
   <div fxFlex="40">
-    <mat-card *ngIf="dish">
+    <mat-card>
         <mat-card-header>
           <mat-card-title>
             <h3>{{dish.name | uppercase}}</h3>
@@ -18,6 +18,7 @@
           <p>{{dish.description}}</p>
         </mat-card-content>
         <mat-card-actions>
+          <button mat-button (click)="goBack()">BACK</button>
           <button mat-button>LIKE</button>
           <button mat-button>SHARE</button>
         </mat-card-actions>
@@ -25,7 +26,7 @@
   </div>
 
   <div fxFlex="40">
-    <mat-list *ngIf="dish">
+    <mat-list>
         <h3>Comments</h3>
         <mat-list-item *ngFor="let comment of dish.comments">
             <h4 mat-line>{{comment.comment}}</h4>
