--- a/Angular/conFusion/src/app/header/header.component.html
+++ b/Angular/conFusion/src/app/header/header.component.html
@@ -1,5 +1,6 @@
 <mat-toolbar color="primary">
     <span><img src="/assets/images/logo.png" height=30 width=41></span>
+    <!-- routerLinkActive="active" -> If the component is active then display the active file in scss-->
     <a mat-button routerLink="/home" routerLinkActive="active"><span class="fa fa-home fa-lg"></span> Home</a>
     <a mat-button routerLinkActive="active"><span class="fa fa-info fa-lg"></span> About</a>
     <a mat-button routerLink="/menu" routerLinkActive="active"><span class="fa fa-list fa-lg"></span> Menu</a>
