--- a/Angular/conFusion/src/app/dishdetail/dishdetail.component.html
+++ b/Angular/conFusion/src/app/dishdetail/dishdetail.component.html
@@ -7,7 +7,7 @@
     fxLayoutGap.xs="0">
 
   <div fxFlex="40">
-    <mat-card>
+    <mat-card *ngIf="dish">
         <mat-card-header>
           <mat-card-title>
             <h3>{{dish.name | uppercase}}</h3>
@@ -26,7 +26,7 @@
   </div>
 
   <div fxFlex="40">
-    <mat-list>
+    <mat-list *ngIf="dish">
         <h3>Comments</h3>
         <mat-list-item *ngFor="let comment of dish.comments">
             <h4 mat-line>{{comment.comment}}</h4>
