Validate username and password field as required field

--- a/Angular/conFusion/src/styles.scss
+++ b/Angular/conFusion/src/styles.scss
@@ -32,6 +32,9 @@ body {
 .background-primary {
     background-color: $background-dark!important;
 }
+.background-light {
+    background-color: $background-pale;
+}
 .background-accent {
     background-color: $accent-color!important;
 }
