--- a/Angular/conFusion/src/app/contact/contact.component.html
+++ b/Angular/conFusion/src/app/contact/contact.component.html
@@ -44,17 +44,29 @@
       <p>
         <mat-form-field class="half-width">
           <input matInput formControlName="firstname" placeholder="First Name" type="text">
+          <!--  <mat-error *ngIf="firstname.errors?.['required'] && firstname.touched">
+          First name is required
+          </mat-error> -->
         </mat-form-field>
         <mat-form-field class="half-width">
           <input matInput formControlName="lastname" placeholder="Last Name" type="text">
+          <!-- <mat-error *ngIf="lastname.errors?.['required'] && feedbackForm.get('lastname').touched">
+          Last name is required
+          </mat-error> -->
         </mat-form-field>
       </p>
       <p>
         <mat-form-field class="half-width">
           <input matInput formControlName="telnum" placeholder="Tel. Number" type="tel">
+          <!-- <mat-error *ngIf="feedbackForm.get('telnum').hasError('required') && feedbackForm.get('telnum').touched">
+          Tel. number is required
+          </mat-error> -->
         </mat-form-field>
         <mat-form-field class="half-width">
           <input matInput formControlName="email" placeholder="Email" type="email">
+          <!-- <mat-error *ngIf="feedbackForm.get('email').hasError('required') && feedbackForm.get('email').touched">
+          Email ID is required
+        </mat-error> -->
         </mat-form-field>
       </p>
       <table class="form-size">
