--- a/Angular/conFusion/src/app/login/login.component.html
+++ b/Angular/conFusion/src/app/login/login.component.html
@@ -20,7 +20,8 @@
                  #password="ngModel" required>
                 <mat-error *ngIf="password.errors?.['required']">Password is required</mat-error>
             </mat-form-field>
-            <mat-checkbox [(ngModel)]="user.remember" name="remember">Remember Me</mat-checkbox>
+            <mat-checkbox [(ngModel)]="user.remember" name="remember" 
+             [disabled]="loginForm.form.invalid">Remember Me</mat-checkbox>
         </p>
     </mat-dialog-content>
     <mat-dialog-actions>
