--- a/Angular/conFusion/src/app/dishdetail/dishdetail.component.html
+++ b/Angular/conFusion/src/app/dishdetail/dishdetail.component.html
@@ -43,6 +43,33 @@
             </p>
         </mat-list-item>
     </mat-list>
+    <div *ngIf="commentForm.valid">
+      <mat-list>
+        <mat-list-item>
+          <p mat-line>{{commentForm.value.comment}}</p>
+          <p mat-line>{{commentForm.value.rating}} Stars</p>
+          <p mat-line>
+              <span> -- {{commentForm.value.author}} </span>
+          </p>
+        </mat-list-item>
+      </mat-list>
+    </div>
+    <form novalidate [formGroup]="commentForm" (ngSubmit)="onSubmit()">
+      <p>
+        <mat-form-field class="full-width">
+          <input matInput formControlName="author" placeholder="Name" type="text">
+          <mat-error *ngIf="formErrors.author">{{formErrors.author}}</mat-error>
+        </mat-form-field>
+      </p>
+      <mat-slider  min="1" max="5" step="1" value="5" thumbLabel tickInterval="1" formControlName="rating"></mat-slider>
+      <p>
+        <mat-form-field class="full-width">
+          <textarea matInput formControlName="comment" placeholder="Your Comment" rows=12></textarea>
+          <mat-error *ngIf="formErrors.comment">{{formErrors.comment}}</mat-error>
+        </mat-form-field>
+      </p>
+      <button type="submit" mat-button class="background-primary text-floral-white" [disabled]="commentForm.invalid">Submit</button>
+    </form>
   </div>
 
 </div>
