--- a/Angular/conFusion/src/app/about/about.component.html
+++ b/Angular/conFusion/src/app/about/about.component.html
@@ -58,7 +58,7 @@
     <h2>Corporate Leadership</h2>
     <mat-list *ngIf="leaders">
         <mat-list-item *ngFor="let leader of leaders">
-            <img matListAvatar src="{{leader.image}}" alt="{{leader.name}}">
+            <img matListAvatar src="{{baseURL + leader.image}}" alt="{{leader.name}}">
                 <p mat-line>{{leader.name}} {{leader.abbr}}</p>
                 <p mat-line>{{leader.designation}}</p>
                 <p mat-line>{{leader.description}}</p>                      
