--- a/Angular/conFusion/src/app/menu/menu.component.html
+++ b/Angular/conFusion/src/app/menu/menu.component.html
@@ -10,7 +10,7 @@
   </div>
 
   <!--  Menu list -->
-  <div fxFlex *ngIf="dishes">
+  <div fxFlex *ngIf="dishes" [@expand]>
     <mat-grid-list cols="2" rowHeight="200px">
       <mat-grid-tile *ngFor="let dish of dishes" [routerLink]="['/dishdetail', dish.id]" appHighlight>
         <img height="200px" src="{{baseURL + dish.image}}" alt={{dish.name}}>
