--- a/Angular/conFusion/src/app/home/home.component.html
+++ b/Angular/conFusion/src/app/home/home.component.html
@@ -6,7 +6,7 @@
      fxLayoutGap="10px">
 
     <!-- Card showing a dish -->
-    <mat-card *ngIf="dish" fxFlex>
+    <mat-card *ngIf="dish" fxFlex [@expand]>
     <mat-card-header>
         <div mat-card-avatar></div>
         <mat-card-title>
@@ -28,7 +28,7 @@
     </div>
 
     <!-- Card showing a promotion -->
-    <mat-card *ngIf="promotion" fxFlex>
+    <mat-card *ngIf="promotion" fxFlex [@expand]>
     <mat-card-header>
         <div mat-card-avatar></div>
         <mat-card-title>
@@ -49,7 +49,7 @@
         <h4>{{promoErrMess}}</h4>
     </div>
 
-    <mat-card *ngIf="leader" fxFlex>
+    <mat-card *ngIf="leader" fxFlex [@expand]>
         <mat-card-header>
             <div mat-card-avatar></div>
             <mat-card-title>
