Show the progress spinner while submitting the form to the server

--- a/Angular/conFusion/src/app/contact/contact.component.html
+++ b/Angular/conFusion/src/app/contact/contact.component.html
@@ -40,7 +40,7 @@
   <div fxFlex fxFlexOffset="20px" class="form-size">
     <h3>Send us your Feedback</h3>
 
-    <form novalidate [formGroup]="feedbackForm" (ngSubmit)="onSubmit()">
+    <form novalidate [formGroup]="feedbackForm" (ngSubmit)="onSubmit()" *ngIf="isLoading == null">
       <p>
         <mat-form-field class="half-width">
           <input matInput formControlName="firstname" placeholder="First Name" type="text">
@@ -80,5 +80,20 @@
       </p>
       <button type="submit" mat-button class="background-primary text-floral-white" [disabled]="feedbackForm.invalid">Submit</button>
     </form>
+
+    <mat-list *ngIf="isLoading">
+      <mat-progress-spinner color="primary" mode="indeterminate"></mat-progress-spinner>
+    </mat-list>
+
+    <div *ngIf="!isLoading && isLoading != null">
+      <h4>Your submission</h4>
+      <p>"First name: {{feedback.firstname}}"</p>
+      <p>"Last name: {{feedback.lastname}}"</p>
+      <p>"Tel. Number: {{feedback.telnum}}"</p>
+      <p>"Email: {{feedback.email}}"</p>
+      <p>"Contact you?: {{feedback.agree}}"</p>
+      <p>"How: {{feedback.contacttype}}"</p>
+      <p>"Feedback: {{feedback.message}}"</p>
+    </div>
   </div>
 </div>
