Rewrite the information in the footer

--- a/Angular/conFusion/src/app/footer/footer.component.scss
+++ b/Angular/conFusion/src/app/footer/footer.component.scss
@@ -14,7 +14,7 @@ $background-pale: #D1C4E9;
 }
 
 .btn-facebook {color:#fff!important; background-color:#3b5998!important;}
-.btn-google-plus{color:#fff!important;background-color:#dd4b39!important;}
+.btn-instagram{color:#fff!important;background-color:#e568e5!important;}
 .btn-youtube{color:#fff!important;background-color:#ff4b39!important;}
 .btn-linkedin{color:#fff!important;background-color:#007bb6!important;}
 .btn-twitter{color:#fff!important;background-color:#55acee!important;}
