--- a/Angular/conFusion/src/app/footer/footer.component.html
+++ b/Angular/conFusion/src/app/footer/footer.component.html
@@ -18,26 +18,23 @@
       <div fxFlex="55">
         <h4>Our Address</h4>
         <address style="text-size: 80%">
-          121, Clear Water Bay Road<br> Clear Water Bay, Kowloon<br> HONG KONG<br>
-          <i class="fa fa-phone"></i>: +852 1234 5678<br>
-          <i class="fa fa-fax"></i>: +852 8765 4321<br>
+          Thanh Xuan Dist<br>Ha Noi<br> Viet Nam<br>
+          <i class="fa fa-phone"></i>: +84 1234 5678<br>
+          <i class="fa fa-fax"></i>: +84 8765 4321<br>
           <i class="fa fa-envelope"></i>:
-          <a href="mailto:confusion@food.net">confusion@food.net</a>
+          <a href="mailto:thanhnhantra@umass.edu">thanhnhantra@umass.edu</a>
         </address>
       </div>
     </div>
   </div>
   <div fxFlex="100" fxFlex.gt-sm="45">
     <div style="text-align:center">
-      <a mat-icon-button class="btn-google-plus" href="http://google.com/+"><i class="fa fa-google-plus fa-lg"></i></a>
+      <a mat-icon-button class="btn-instagram" href="https://www.instagram.com"><i class="fa fa-instagram fa-lg"></i></a>
       <a mat-icon-button class="btn-facebook" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook fa-lg"></i></a>
       <a mat-icon-button class="btn-linkedin" href="http://www.linkedin.com/in/"><i class="fa fa-linkedin fa-lg"></i></a>
       <a mat-icon-button class="btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter fa-lg"></i></a>
       <a mat-icon-button class="btn-youtube" href="http://youtube.com/"><i class="fa fa-youtube fa-lg"></i></a>
       <a mat-icon-button class="btn-mail" href="mailto:"><i class="fa fa-envelope-o fa-lg"></i></a>
     </div>
-  </div>
-  <div>
-      <p>© Copyright 2018 Ristorante Con Fusion</p>
   </div>
 </div>
