Rewrite the information in the header

--- a/Angular/conFusion/src/app/header/header.component.html
+++ b/Angular/conFusion/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-    <span><img src="/assets/images/logo.png" height=30 width=41></span>
+    <span><img src="/assets/logo.png" height=30 width=41></span>
     <!-- routerLinkActive="active" -> If the component is active then display the active file in scss-->
     <a mat-button routerLink="/home" routerLinkActive="active"><span class="fa fa-home fa-lg"></span> Home</a>
     <a mat-button routerLink="/aboutus" routerLinkActive="active"><span class="fa fa-info fa-lg"></span> About</a>
@@ -19,12 +19,12 @@
       fxLayoutGap="10px">
   
     <div fxFlex fxFlex.gt-sm="50%">
-      <h1>Ristorante Con Fusion</h1>
+      <h1>Nhan Restaurant</h1>
       <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations
         will tickle your culinary senses!</p>
     </div>
     <div fxFlex fxFlex.gt-sm="20%">
-      <img src="/assets/images/logo.png" alt="Logo">
+      <img src="/assets/logo.png" alt="Logo">
     </div>
     <div fxFlex></div>
   </div>
